# document-converter

./: .gitignore  LICENSE  README.md  manifest.json  pyproject.toml  requirements.txt  server.json  server.py
.github/workflows/: release.yml
scripts/: fix_gitignore.py  fix_pyproject.py  setup-windows-uvx-git-shim.ps1  write_readme.py
