[project]
name = "document-converter-mcp"
version = "1.0.0"
description = "MCP server that converts documents to Markdown using MarkItDown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
    "markitdown>=0.1.6",
]

[project.scripts]
document-converter-mcp = "server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
